added two extra lines

--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,6 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Italian:  Ciao, amici! </li>
+  <li> Deep South:  Y'all'll, l8r! </li>
 </ul>
